# agora_framework

./: CMakeLists.txt
agora_margot_manager_sample/: agora_margot_manager.cpp  agora_margot_manager.hpp
cmake/: FindMQTT.cmake
framework/: CMakeLists.txt
framework/agoraLocalAppHandler/: CMakeLists.txt
framework/agoraLocalAppHandler/include/agora/: OPs.hpp  appStruct.hpp  framework.hpp  mqtt.hpp  topics.hpp
framework/agoraLocalAppHandler/src/: OPs.cpp  appStruct.cpp  framework.cpp  mqtt.cpp  topics.cpp
framework/agoraRemoteDispactcher_agoraRemoteAppHandler/: agoraDispatcher.py  agoraRemoteAppHandler.py  appStruct.py  fcccDesign.py  rsm.py  sparkGenLinRegrPolyComb2.py  sparkGenLinRegrTransforms.py
framework/config/: CMakeLists.txt  FindAGORALOCALAPPHANDLER.cmake.in
